--- a/Tx.AppInsights.Azure/Tx.AppInsights.Azure.csproj
+++ b/Tx.AppInsights.Azure/Tx.AppInsights.Azure.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationInsightsAzureStorage.cs" />
     <Compile Include="CacheableReader.cs" />
     <Compile Include="PlaybackExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
